src/app/components/statistics/statisticsConstraints/statisticsConstraints.css
.dateSelector {
    margin: auto;
    width: 200px;
}

.dateSelector .col {
    text-align-last: center;
    cursor: pointer;
}

.svgConstraintsContainer {
    margin-top: 20px;
}

.colorsCellsContainer {
    left: 60px;
    position: fixed;
    top: 75px;
}

.colorsCellsContainer > div {
    display: flex;
}

.colorsCellsContainer > div > div {
    display: block;
    width: 100px;
    height: 16px;
    margin-left: 5px;
}

.waitingCell {
    background-color: #1f77b4;
}

.refusedCell {
    background-color: #d62728;
}

.confirmedCell {
    background-color: #2ca02c;
}

